# fetmrqc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE  README.md  environment.yml  pyproject.toml  requirements.txt  run_docker.py  setup.py
fetal_brain_qc/: anon_bids.py  brain_extraction.py  definitions.py  index.py  list_bids.py  plotting.py  preprocess.py  randomize.py  report.py  utils.py  version.py
fetal_brain_qc/cli/: brain_extraction.py  build_run_parsers.py  compute_iqms.py  compute_segmentation.py  generate_index.py  generate_reports.py  inference.py  list_and_anon_bids.py  qc_niftymic.py  qc_to_bids_config.py  randomize_reports.py  ratings_to_csv.py  run_brain_extraction.py  run_eval_qc.py  run_eval_qc_sacred.py  run_fetmrqc_inference.py  run_index.py  run_inference_pipeline.py  run_iqa.py  run_iqms_extraction.py  run_list_and_anon_bids.py  run_pipeline.py  run_preprocessing.py  run_qc.py  run_qc_niftymic.py  run_qc_svrtk.py  run_qc_svrtk_old.py  run_qc_svrtk_v2.py  run_reports_pipeline.py  run_segmentation.py  run_stack_iqa.py  run_train_fetmrqc.py  summarize_qc_eval.py  training.py
fetal_brain_qc/data/: __init__.py  config.py
fetal_brain_qc/data/reports/: index.html  report.html  report_SR.html
fetal_brain_qc/fetal_IQA/: __init__.py  architectures.py  utils.py
fetal_brain_qc/fnndsc_IQA/: __init__.py  predict_resnet.py  resnet_architecture.py  utils.py
fetal_brain_qc/metrics/: __init__.py  metrics.py  metrics_sr.py  mriqc_metrics.py  utils.py
fetal_brain_qc/models/: fetmrqc_20_class.joblib  fetmrqc_20_class.json  fetmrqc_20_regr.json  fetmrqc_full_class.joblib  fetmrqc_full_class.json  fetmrqc_full_regr.json  put_models_here.txt
fetal_brain_qc/qc_evaluation/: __init__.py  load_dataset.py  model_selection.py  preprocess.py  qc_evaluation.py  sacred_helpers.py
fetal_brain_qc/scripts/: bidsify.py  iterate_dir_slicer.py
notebooks/: test_segmentation_iqms.ipynb
tests/: test_cli.py  test_qc_eval_preprocessing.py
tests/data/: dataset_description.json
tests/data/code/: params.json
tests/output/: metrics.csv  test_run_pipeline.txt
