[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetal_brain_qc"
version = "0.1.3"
description = "Quality control for fetal brain MRI"
authors = [
    {name = "Thomas Sanchez", email = "thomas.sanchez@unil.ch"},
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    # Anchors — must be exact
    "numpy==1.19.5",                  # TF 2.5 forces this; everything else cascades
    "typing-extensions==3.7.4.3",    # TF 2.5 forces this
    "tensorflow==2.5.0",
    "torch==1.13.0",                  # without pin, resolves to 2.8.0
    "torchvision==0.14.0",
    "monai==0.3.0",
    "pytorch-ignite==0.4.2",
    "xgboost==1.7.5",
    "pandas==1.4.4",
    "scipy==1.10.1",
    "matplotlib==3.6.3",
    "scikit-image==0.19.3",
    "statsmodels==0.14.1",
    "seaborn==0.12.2",
    "nibabel==5.1.0",
    "pybids==0.17.2",
    "nilearn==0.10.4",
    "beautifulsoup4==4.12.3",         # 4.14+ needs typing-extensions>=4.0
    "keras==2.4.3",
    "scikit-learn==1.6.1",
    "jinja2>=3.1.2",
    "natsort>=5.3.0",
    "nipype>=1.0.3",
    "nose>=1.3.7",
    "nsol>=0.1.14",
    "pydicom>=1.2.0",
    "pysitk>=0.2.19",
    "SimpleITK>=1.2.0",
    "six>=1.11.0",
    "torch-summary>=1.3.2",
    "pyyaml>=5.3.1",
    "tensorboard>=2.2.1",
    "fetal_brain_utils @ git+https://github.com/Medical-Image-Analysis-Laboratory/fetal_brain_utils@main",
    "MONAIfbs @ git+https://github.com/t-sanchez/MONAIfbs@main",
]

[project.scripts]
qc_list_bids_csv = "fetal_brain_qc.cli.list_and_anon_bids:main"
qc_generate_index = "fetal_brain_qc.cli.generate_index:main"
qc_generate_reports = "fetal_brain_qc.cli.generate_reports:main"
qc_brain_extraction = "fetal_brain_qc.cli.brain_extraction:main"
qc_segmentation = "fetal_brain_qc.cli.compute_segmentation:main"
qc_compute_iqms = "fetal_brain_qc.cli.compute_iqms:main"
qc_niftymic_qc = "fetal_brain_qc.cli.qc_niftymic:main"
qc_ratings_to_csv = "fetal_brain_qc.cli.ratings_to_csv:main"
qc_inference = "fetal_brain_qc.cli.inference:main"
qc_training = "fetal_brain_qc.cli.training:main"
qc_reports_pipeline = "fetal_brain_qc.cli.run_reports_pipeline:main"
qc_inference_pipeline = "fetal_brain_qc.cli.run_inference_pipeline:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fetal_brain_qc*"]

[tool.setuptools.package-data]
fetal_brain_qc = ["data/reports/*.html"]
